--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "authtest",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^3.0.0",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.3",
-    "multer": "^1.3.1"
-  }
+    "name": "simple-auth-4-express",
+    "version": "0.0.1",
+    "description": "A simple authentication middleware for Express",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/nicferrier/express-simpleauth"
+    },
+    "keywords": [
+        "express",
+        "middleware",
+        "basic-authentication"
+    ],
+    "author": "Nic Ferrier, <ferriernic@gmail.com>",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^3.0.0",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.16.3",
+        "multer": "^1.3.1"
+    }
 }
