--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "simple-auth-4-express",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A simple authentication middleware for Express",
     "main": "server.js",
     "scripts": {
@@ -18,7 +18,7 @@
     "author": "Nic Ferrier, <ferriernic@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "bcrypt": "^3.0.0",
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
         "multer": "^1.3.1"
