--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "simple-auth-4-express",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "A simple authentication middleware for Express",
     "main": "server.js",
     "scripts": {
@@ -21,6 +21,9 @@
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
-        "multer": "^1.3.1"
+        "fetch-cookie": "^0.7.2",
+        "form-data": "^2.3.2",
+        "multer": "^1.3.1",
+        "node-fetch": "^2.2.0"
     }
 }
