--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A simple authentication middleware for Express",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node test.js"
     },
     "repository": {
         "type": "git",
