--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "form-data": "^2.3.2",
         "multer": "^1.3.1",
         "node-fetch": "^2.2.0"
+    },
+    "devDependencies": {
+        "zombie": "^6.1.3"
     }
 }
