--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "author": "Nic Ferrier, <ferriernic@gmail.com>",
     "license": "ISC",
     "dependencies": {
+        "@babel/polyfill": "^7.0.0",
+        "@babel/preset-env": "^7.1.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
+        "express-babelify-middleware": "^0.2.1",
+        "express-browserify": "^1.0.2",
         "fetch-cookie": "^0.7.2",
         "form-data": "^2.3.2",
         "multer": "^1.3.1",
