--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "simple-auth-4-express",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "description": "A simple authentication middleware for Express",
     "main": "server.js",
     "scripts": {
@@ -18,6 +18,7 @@
     "author": "Nic Ferrier, <ferriernic@gmail.com>",
     "license": "ISC",
     "dependencies": {
+        "@babel/core": "^7.1.0",
         "@babel/polyfill": "^7.0.0",
         "@babel/preset-env": "^7.1.0",
         "bcryptjs": "^2.4.3",
